--- a/Task_3_4_2024.md
+++ b/Task_3_4_2024.md
@@ -1,4 +1,51 @@
 Task:
 ======
-	1. nested if 
+  1. nested if 
   2. when for loop becomes infinite
+  3. Finding Prime Numbers upto n. n is an integer
+ 
+  4. Problem: Unique Substrings Counter
+
+You are given a string . Your task is to find the count of unique substrings present in 
+
+A substring of S is any contiguous sequence of characters within 
+A substring is considered unique if it does not match with any other substrings in the given string, including itself.
+
+Write a Java function to calculate and return the count of unique substrings in 
+
+**Function Signature:**
+
+public static int countUniqueSubstrings(String s)
+
+**Input Format:**
+Input Format:
+
+A string s of length 
+N (1≤≤1000 1≤N≤1000).
+
+**Output Format:**
+
+An integer representing the count of unique substrings in 
+**Sample Input:**
+
+``` "abcabc" ```
+**Sample Output:**
+	``` 12 ```
+**Explanation:**
+The unique substrings in the given string "abcabc" are:
+
+a
+ab
+abc
+abca
+abcab
+abcabc
+b
+bc
+bca
+bcab
+bcabc
+c
+Hence, the total count of unique substrings is 12.
+
+Complete the function countUniqueSubstrings to achieve this. 
