--- a/Task_3_4_2024.md
+++ b/Task_3_4_2024.md
@@ -49,3 +49,34 @@ c
 Hence, the total count of unique substrings is 12.
 
 Complete the function countUniqueSubstrings to achieve this. 
+
+5.
+task 1:
+
+for loop:
+
+	int i=90;
+	for(;i>100;i++){}
+
+	
+	int i=90;
+	for(;i>100;i--){}
+
+	int i=90;
+	for(; ;i++){}
+
+	int i=90;
+	for(;i<100;i++){}
+
+	int i=90;
+	for(;i<100;i+=2){}
+
+task 2:
+	int i=23 ==> 2+3=>5
+	int i=33 ==> 3+3=>6
+
+	int i=56 ==>11 => 1+1=> 2
+	int 456 ==>4+5=> 9+6=> 15 => 1+5=> 6
+	int 1245 => 1+2=>3+4=>7+5=>12=>1+2=>3
+
+
