--- a/Task_8_4_2024.md
+++ b/Task_8_4_2024.md
@@ -13,8 +13,10 @@ new :
 241    234   132   342
 ....
 ....
-   
+
+   2. Write a Java program to print odd numbers from 1 to 99. Prints one number per line.
 3. Write a Java program that accepts an integer (n) and computes the value of n+nn+nnn.
-Sample Output:
-Input number: 5                                                        
-5 + 55  + 555
+   **Sample Output:**
+   Input number: 5                                                        
+   5 + 55  + 555
+
