--- a/Task_8_4_2024.md
+++ b/Task_8_4_2024.md
@@ -20,3 +20,26 @@ new :
    Input number: 5                                                        
    5 + 55  + 555
 
+4. Consider the following class:
+
+public class IdentifyMyParts {
+    public static int x = 7; 
+    public int y = 3; 
+}
+What are the class variables?
+
+What are the instance variables?
+
+What is the output from the following code:
+
+IdentifyMyParts a = new IdentifyMyParts();
+IdentifyMyParts b = new IdentifyMyParts();
+a.y = 5;
+b.y = 6;
+a.x = 1;
+b.x = 2;
+System.out.println("a.y = " + a.y);
+System.out.println("b.y = " + b.y);
+System.out.println("a.x = " + a.x);
+System.out.println("b.x = " + b.x);
+System.out.println("IdentifyMyParts.x = " + IdentifyMyParts.x);
